--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -2,7 +2,8 @@
 
 	<!-- Logo -->
 	<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
-		<img src="/img/logo.svg" alt="Kaldi logo" class="br0 db mb0 w-100"/>
+		<a href="/" class="pa3 no-underline db">Notebook of m-b-t-n</a>
+		<!-- img src="/img/logo.svg" alt="Kaldi logo" class="br0 db mb0 w-100"/ -->
 	</a>
 
 	<!-- Primary Nav -->
