--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -14,6 +14,11 @@
 		</div>
 		-->
 
+		<div class="measure-narrow center mb4">
+			<p>© 2021 m-b-t-n</p>
+			<p>This site uses <a href="https://github.com/netlify-templates/victor-hugo">victor-hugo</a>.</p>
+		</div>
+
 		<div class="flex-ns justify-between">
 
 			<!--
