--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -15,13 +15,22 @@
 		-->
 
 		<div class="measure-narrow center mb4">
-			<p>© 2021 m-b-t-n</p>
-			<p>This site uses <a href="https://github.com/netlify-templates/victor-hugo">victor-hugo</a>.</p>
+			<div>
+				<p>© 2021 m-b-t-n</p>
+				<p>This site uses <a href="https://github.com/netlify-templates/victor-hugo">victor-hugo</a>.</p>
+			</div>
+			<div>
+				<ul class="mhn2">
+					{{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }}
+					{{ partial "social-icon" (dict "link" "#" "svg" "icons-github") }}
+				</ul>
+			</div>
+
 		</div>
 
+		<!--
 		<div class="flex-ns justify-between">
 
-			<!--
 			<div>
 				<h3 class="f4 b lh-title mb1 primary">Kaldi</h3>
 				<ul class="mb3">
@@ -32,9 +41,7 @@
 					<li><a href="/contact" class="link">Contact</a></li>
 				</ul>
 			</div>
-			-->
 
-			<!--
 			<div>
 				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
 				<ul class="mb3">
@@ -42,7 +49,6 @@
 					<li><a href="/contact" class="link">Schedule and appointment</a></li>
 				</ul>
 			</div>
-			-->
 
 			<div>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
@@ -55,6 +61,7 @@
 			</div>
 
 		</div>
+		-->
 	</div>
 
 </footer>
