--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -22,7 +22,7 @@
 			<div>
 				<ul class="mhn2">
 					{{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-github") }}
+					<p><img src="img/icons-github.png" alt="GitHub"></p>
 				</ul>
 			</div>
 
