Set sotial icons

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -21,8 +21,12 @@
 			</div>
 			<div>
 				<ul class="mhn2">
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }}
-					<p><img src="img/icons-github.png" alt="GitHub"></p>
+					{{ partial "social-icon" (dict "link" "https://twitter.com/mbtn_0xff" "svg" "icons-twitter") }}
+					<p>
+						<a href="https://github.com/m-b-t-n">
+							<img src="img/icons-github.png" width=40px height=40px alt="GitHub">
+						</a>
+					</p>
 				</ul>
 			</div>
 
