--- a/site/layouts/section/about.html
+++ b/site/layouts/section/about.html
@@ -1,6 +1,10 @@
 {{ define "main" }}
 
-<p>Test</p>
+<div class="ph3 bg-off-white">
+	<div class="center mw6 pv3">
+		{{ .Content }}
+	</div>
+</div>
 
 {{ end }}
 
