Add jumbotron section to about page

--- a/site/layouts/section/about.html
+++ b/site/layouts/section/about.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
 
+{{ partial "jumbotron" (dict "imageUrl" "/img/home-jumbotron.jpg" "title" .Params.title) }}
+
 <div class="ph3 bg-off-white">
 	<div class="center mw6 pv3">
 		{{ .Content }}
