--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -23,10 +23,10 @@
 	<meta name="theme-color" content="#fff">
 
 	<!-- Open Graph -->
-	<meta property="og:type" content="business.business">
-	<meta property="og:title" content="Kaldi | Great coffee with a conscience">
-	<meta property="og:url" content="/">
-	<meta property="og:image" content="/img/og-image.jpg">
+	<meta property="og:type" content="Technical notebook">
+	<meta property="og:title" content="Notebook of m-b-t-n">
+	<meta property="og:url" content="https://notebook-of-m-b-t-n.netlify.app/">
+	<meta property="og:image" content="/img/home-jumbotron.jpg">
 
   {{ if .IsHome }}
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
