--- a/site/layouts/post/single.html
+++ b/site/layouts/post/single.html
@@ -4,7 +4,11 @@
     <h1 class="f2 lh-title b mb3">{{.Title}}</h1>
     <div class="flex justify-between grey-3">
       <p>Posted at {{ .Date.Format "2006-01-02" }}</p>
-      <p>{{ .Params.Tags }}</p>
+      <p>
+      {{ range $key := .Params.Tags }}
+      <a href="/tags/{{ $key | urlize }}">{{ $key }}</a></p>
+      {{ end }}
+      </p>
     </div>
     <div class="cms mw6">
       <p>{{ .Description }}</p>
